trunk/Archive2/89/4d25237202ccdf/output
+ g++-4.8 -O3 -pedantic -Wall -Wextra -Wconversion -std=c++1y -pthread main.cpp
In file included from /usr/include/c++/4.8/bits/char_traits.h:39:0,
                 from /usr/include/c++/4.8/ios:40,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iterator:64,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algobase.h: In instantiation of 'std::pair<_T1, _T2> std::mismatch(_InputIterator1, _InputIterator1, _InputIterator2, _BinaryPredicate) [with _InputIterator1 = char*; _InputIterator2 = char*; _BinaryPredicate = char*]':
main.cpp:8:49:   required from here
/usr/include/c++/4.8/bits/stl_algobase.h:1206:76: error: '__binary_pred' cannot be used as a function
       while (__first1 != __last1 && bool(__binary_pred(*__first1, *__first2)))
                                                                            ^
